# forge

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: release.yml
doc/: color_overlay_principle.md  design.md
packaging/: forge.spec
scripts/: build_executable.py  calibration_solver.py  debug_lib.py  debug_safe_inputs.py  generate_calibration.py  generate_calibration_card.py  test_hilbert_dither.py  test_ui_import.py  test_vectorization.py  test_vectorization_advanced.py
src/forge/: __init__.py  main.py
src/forge/core/: analyzer.py  calibration.py  color_distance.py  color_model.py  exporter.py  optics.py  palette_analyzer.py  settings.py
src/forge/core/dithering/: __init__.py  atkinson.py  base.py  blue_noise.py  dbs.py  floyd_steinberg.py  ordered.py  riemersma.py  serpentine.py  sierra.py  structure_aware.py
src/forge/core/filters/: __init__.py  base.py  bilateral.py  guided.py  sharpen.py
src/forge/core/quantizers/: __init__.py  base.py  kmeans.py  median_cut.py  octree.py
src/forge/core/vectorizers/: __init__.py  base.py  color_traced.py  vtracer_wrapper.py
src/forge/ui/: calibration_dialog.py  comparison_dialog.py  main_window.py
tests/: test_color_optimization.py  test_core.py
